--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                 <img src='vasabi.png'>
                 <span><b class='title'>VASABI.</b> Doing User Behaviour Analytics through Interactive Visual User Profiles.</span>
             </a>
-            <a class='project' href='https://phongvis.github.io/viseto/demo/all' target='_blank' >
+            <a class='project' href='https://phongvis.github.io/viseto/' target='_blank' >
                 <img src='viseto.png'>
                 <span><b class='title'>Viseto.</b> A framework for building topic models using visualisation.</span>
             </a>
-            <a class='project' href='https://phongvis.github.io/threadlet/demo/threadall' target='_blank' >
+            <a class='project' href='https://phongvis.github.io/threadlet/' target='_blank' >
                 <img src='threadlet.png'>
                 <span><b class='title'>Threadlet.</b> Visual exploration of email threads.</span>
             </a>
@@ -110,7 +110,7 @@
                 <img src='valcri.png'>
                 <span><b class='title'>VALCRI.</b> Visual analysis of multivariate crime data.</span>
             </a>
-            <a class='project' href='https://phongvis.github.io/ukvac/main/' target='_blank' >
+            <a class='project' href='https://phongvis.github.io/ukvac/' target='_blank' >
                 <img src='ukvac.png'>
                 <span><b class='title'>UKVAC.</b> A visualisation dashboard with provenance capture and restore capability.</span>
             </a>
