--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src='timesets.png'>
                 <span><b class='title'>TimeSets.</b> Timeline Visualization with Set Relations.</span>
             </a>
-            <a class='project' href='http://www.staff.city.ac.uk/~sbkr014/papers/SchemaLine.pdf' target='_blank' >
+            <a class='project' href='https://vimeo.com/144671189' target='_blank' >
                 <img src='schemaline.png'>
                 <span><b class='title'>SchemaLine.</b> Timeline Visualization for Sensemaking.</span>
             </a>
