--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             All of the following bespoke visualisations are developed using
             <strong>D3.js</strong> (except for the very last one, SchemaLine, that I used
             Processing). <br />For each project, I include links to resources and specify the data
-            characteristics and data mining or machine learning techniques involved.
+            characteristics and <strong>data mining or machine learning</strong> techniques
+            involved.
         </div>
         <div class="projects">
             <!--
